Made sure privatize key

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ platepal/backend/userFeedback.keras
 platepal/backend/__pycache__/connectDb.cpython-312.pyc
 platepal/backend/__pycache__/recommender.cpython-312.pyc
 platepal/backend/__pycache__/connectDb.cpython-312.pyc
+platepal/auth.txt
