--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ platepal/backend/__pycache__/connectDb.cpython-312.pyc
 platepal/backend/__pycache__/recommender.cpython-312.pyc
 platepal/backend/__pycache__/connectDb.cpython-312.pyc
 platepal/auth.txt
+platepal/backend/connectDb_insec.py
+platepal/backend/optimizerModel_insec.py
+platepal/backend/planer_insec.py
+platepal/backend/recommender_insec.py
+platepal/backend/scraper_insec.py
